sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: '=' expected but ';' found.
  var h=0
^